see previous commit (1st FE, not last BE)

--- a/src/main/resources/teksten.properties
+++ b/src/main/resources/teksten.properties
@@ -1,1 +1,2 @@
-org.hibernate.validator.constraints.SafeHtml.message=Mag geen script bevatten
+org.hibernate.validator.constraints.SafeHtml.message=Can not contain a script
+
