own @PastLocalDate constraint (@Past not yet working for LocalDate) SportsmanForm: corrected typo in variable (maxHearbeats => maxHeartbeats)

--- a/src/main/resources/teksten.properties
+++ b/src/main/resources/teksten.properties
@@ -1,2 +1,2 @@
-org.hibernate.validator.constraints.SafeHtml.message=Can not contain a script
-
+org.hibernate.validator.constraints.SafeHtml.message=Can not contain a script.
+be.vdab.constraints.PastLocalDateConstraint=Date must be in the past.
