--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
 		<dependency> <!-- Hibernate Validator dependency -->
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
-			<version>[5.1.0, 5.1.99]</version>
+			<version>[5.3.5,)</version>
 		</dependency>
 		<dependency> <!-- beschermen tegen cross-site scripting (xss) @SafeHtml nog bij velden 
 				zetten -->
